--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "./node_modules/.bin/mocha --reporter spec"
     },
     "repository": {
         "type": "git",
@@ -19,5 +19,11 @@
     "homepage": "https://github.com/FrescoDev/niobi-general-web-application#readme",
     "dependencies": {
         "express": "^4.14.1"
+    },
+    "devDependencies": {
+        "chai": "^3.5.0",
+        "mocha": "^3.2.0",
+        "chai-http": "^3.0.0",
+        "request": "^2.79.0"
     }
 }
